base/cis_policies_v1.10.0/templates/restrict-capabilities-template.yaml
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate
metadata:
  name: restrictcapabilities
  annotations:
    argocd.argoproj.io/sync-wave: '-1'
spec:
  crd:
    spec:
      names:
        kind: RestrictCapabilities
      validation:
        openAPIV3Schema:
          openAPIV3Schema:
            type: object
            properties:
              exemptImages:
                type: array
                items:
                  type: string
            required:
            - exemptImages
  targets:
  - target: admission.k8s.gatekeeper.sh
    rego: |
      package restrictcapabilities

      violation[{
        "msg": msg,
        "details": {"container": container.name}
      }] {
        container := input.review.object.spec.containers[_]
        not exempt(container.image)
        cap := container.securityContext.capabilities.add[_]
        msg := sprintf("Container %s requests capability %s", [container.name, cap])
      }

      exempt(image) {
        contains(input.parameters.exemptImages, image)
      }
